<resources>
    <string name="app_name">KIM Prototype App</string>

    <string name="Welcome">Welcome!</string>
    <string name="menu">Menu</string>
    <string name="action_home">Home</string>
    <string name="action_newAccount">Post New Account</string>
    <string name="action_newStocks">Post New Stock</string>
    <string name="addAccount">Add or change this account</string>
    <string name="addStock">Add or change this Stock</string>
    <string name="action_help">Help</string>
    <string name="action_stocks">Stocks</string>
    <string name="action_settings">Settings</string>
    <string name="action_training">Training Guide</string>
    <string name="action_stockPitch">Stock Pitch</string>
    <string name="action_adminTools">Admin Tools</string>
    <string name="action_logout">Log Out</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Login">Login</string>
    <string name="Stocks">Stocks</string>
    <string name="editPortfolioText">Total Holdings = $1,201,936.67</string>
    <string name="portfolioPreview">This page will later have a graph and more info about the portfolio.</string>
    <string name="helpPreview">
<b><i>Finding Stock Information for a specific stock:</i></b>\n You can use the Stocks feature of the KIM app to access the stocks in KIM\'s portfolio.\n\n

The detailed steps in this section show you how to:\n

    <b>1. Access the Stocks:</b>\n
           - Log in to the KIM app using your login credentials. You will end up on the KIM app home page.\n
           - On the screen, locate the "Stocks" button below the KIM logo.\n
    <b>2. Find the information you are looking for:</b>\n
           - Click on the "Stocks" button.\n
           - Scroll through the list of stocks, and click on the stock ticker you need information about.\n
    <b>3. Exit the Stocks page:</b>\n
           - After you are finished with viewing the stock information, go back to the top right corner of the screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Home”.\n\n

<b><i>Finding a Stock Pitch:</i></b>\nYou can use the Stock Pitch option of the KIM app to view this week’s stock pitch for KIM.\n\n

The detailed steps in this section show you how to:\n

    <b>1. Access the Stock Pitch:</b>\n
           - Log in to the KIM app using your login credentials.\n
           - Go to the top right corner of your screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Stock Pitch”. This will open the Stock Pitch page.\n
    <b>2. Find the information you are looking for:</b>\n
           - Click on the Google Drive link.\n
           - Select the stock pitch you want to view.\n
    <b>3. Exit the Stock Pitch page:</b>\n
           - After you are finished with viewing the stock pitch, go back to the top right corner of the screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Home”.\n\n

<b><i>Using the Training Guide:</i></b>\nYou can use the Training Guide page of the KIM app to understand the activities carried out in KIM.\n\n

The detailed steps in this section show you how to:\n

    <b>1. Access the Training Guide:</b>\n
           - Log in to the KIM app using your login credentials.\n
           - Go to the top right corner of your screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Training Guide”. This will open the Training Guide page.\n
    <b>2. Find the information you are looking for:</b>\n
           - Click on the Google Drive link.\n
           - Select the Training Guide.\n
           - Scroll through to find the information you want.\n
    <b>3. Exit the Training Guide page:</b>\n
           - After you are finished with viewing the Training Guide, go back to the top right corner of the screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Home”.\n\n

<b><i>Using the Admin Tools:</i></b>\nYou can use the Admin Tools feature of the KIM app if you are an administrator in the club.\n\n
Imagine it is a new semester and you want to change the passwords of the user accounts.The detailed steps in this section show you how to:\n

    <b>1. Access the Admin Tools Feature:</b>\n
           - Log in to the KIM app using your Administrator login credentials.\n
           - Go to the top right corner of your screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Admin Tools”. This will open the Admin Tools Page.\n
    <b>2. Add or Change that account’s password:</b>\n
           - Type the new password in the “New Account Password” textbox.\n
           - Press the “Add or change this account” button.\n
           - Your changes have been added to the database.\n
    <b>3. Exit the Admin Tools page:</b>\n
           - After you are finished with using the Admin Tools, go back to the top right corner of the screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Home”.\n\n

 <b><i>Logging out:</i></b>\nFor security reasons, you will nedd to log out of the KIM app after using it.\n\n

The detailed steps in this section show you how to:\n

    <b>1. Access the Log Out feature:</b>\n
           - When you are logged in to the KIM app, go to the top right corner of your screen to find the Menu bar.\n
           - Click on the Menu bar, and then select “Log Out”. This will log you out, and take you back to the login screen.\n\n
    </string>
    <string name="trainingPreview">Click on the following link for the training manual: </string>
    <string name="stockPreview">Click on the following link for KIM stock pitches: </string>
    <string name="stockPitchPreview">This page will later have the current week\'s stock pitch.</string>
    <string name="hello_world">Hello world!</string>
    <string name="stock_pitches_link">https://drive.google.com/folderview?id=0B93pinjwrYuGLW16akNDNUhibXM\u0026usp=sharing</string>
    <string name="training_drive_link">https://drive.google.com/folderview?id=0B93pinjwrYuGMHVTTGgzd3NEb0k\u0026usp=sharing</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="title_activity_stock_pitch">StockPitchActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_log_out">StockPitchActivity</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_account_post">AccountPostActivity</string>
    <string name="title_activity_stock_post">StockPostActivity</string>
</resources>
