<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.calvin.cs.kimprototypeapp.PortfolioActivity">


    <TextView android:text="@string/editPortfolioText" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" /> />

    <TextView android:text="@string/portfolioPreview" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp" /> />

    <Button
        style="@style/btnStyleGenoa"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/Stocks"
        android:id="@+id/individualStockButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
